feat: fundamentals
